@@ -21,6 +21,8 @@
 	what you want to be notify by a determined filter and/or event.
 	+ RAID watcher is added to check the RAID events that may happen
 	when the RAID subsystem is configured in the eBox machine
+	+ Progress indicator now contains a returned value and error
+	message as well
 0.11
 	+ Fix issue with multiple models and models with params.
 	  This triggered a bug in DHCP when there was just one static
